# img-embed-td

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/img_embed_td/: __init__.py  _functional.py  _models.py  _transforms.py  cli.py  conftest.py
src/img_embed_td/_test/: test_all.py  test_data.py  test_fitting.py  test_functional.py
